--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/sahat/hackathon-starter.git"
   },
+  "engines": {
+    "node": "0.12.5"
+  },
   "scripts": {
     "start": "node app.js",
     "test": "mocha"
